lib/src/csslib/CSSParser.dart
// Generated from csslib/CSSParser.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'CSSParserVisitor.dart';
import 'CSSParserBaseVisitor.dart';
const int RULE_stylesheet = 0, RULE_charset = 1, RULE_imports = 2, RULE_namespace_ = 3, 
          RULE_namespacePrefix = 4, RULE_media = 5, RULE_mediaQueryList = 6, 
          RULE_mediaQuery = 7, RULE_mediaType = 8, RULE_mediaExpression = 9, 
          RULE_mediaFeature = 10, RULE_page = 11, RULE_pseudoPage = 12, 
          RULE_selectorGroup = 13, RULE_selector = 14, RULE_combinator = 15, 
          RULE_simpleSelectorSequence = 16, RULE_typeSelector = 17, RULE_typeNamespacePrefix = 18, 
          RULE_elementName = 19, RULE_universal = 20, RULE_className = 21, 
          RULE_attrib = 22, RULE_pseudo = 23, RULE_functionalPseudo = 24, 
          RULE_expression = 25, RULE_negation = 26, RULE_negationArg = 27, 
          RULE_operator_ = 28, RULE_property_ = 29, RULE_ruleset = 30, RULE_declarationList = 31, 
          RULE_declaration = 32, RULE_prio = 33, RULE_value = 34, RULE_expr = 35, 
          RULE_term = 36, RULE_function_ = 37, RULE_dxImageTransform = 38, 
          RULE_hexcolor = 39, RULE_number = 40, RULE_percentage = 41, RULE_dimension = 42, 
          RULE_unknownDimension = 43, RULE_any_ = 44, RULE_atRule = 45, 
          RULE_unused = 46, RULE_block = 47, RULE_nestedStatement = 48, 
          RULE_groupRuleBody = 49, RULE_supportsRule = 50, RULE_supportsCondition = 51, 
          RULE_supportsConditionInParens = 52, RULE_supportsNegation = 53, 
          RULE_supportsConjunction = 54, RULE_supportsDisjunction = 55, 
          RULE_supportsDeclarationCondition = 56, RULE_generalEnclosed = 57, 
          RULE_url = 58, RULE_var_ = 59, RULE_calc = 60, RULE_calcSum = 61, 
          RULE_calcProduct = 62, RULE_calcValue = 63, RULE_fontFaceRule = 64, 
          RULE_fontFaceDeclaration = 65, RULE_keyframesRule = 66, RULE_keyframeBlock = 67, 
          RULE_keyframeSelector = 68, RULE_viewport = 69, RULE_counterStyle = 70, 
          RULE_fontFeatureValuesRule = 71, RULE_fontFamilyNameList = 72, 
          RULE_fontFamilyName = 73, RULE_featureValueBlock = 74, RULE_featureType = 75, 
          RULE_featureValueDefinition = 76, RULE_ident = 77, RULE_ws = 78;
class CSSParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_OpenBracket = 1, TOKEN_CloseBracket = 2, TOKEN_OpenParen = 3, 
                   TOKEN_CloseParen = 4, TOKEN_OpenBrace = 5, TOKEN_CloseBrace = 6, 
                   TOKEN_SemiColon = 7, TOKEN_Equal = 8, TOKEN_Colon = 9, 
                   TOKEN_Dot = 10, TOKEN_Multiply = 11, TOKEN_Divide = 12, 
                   TOKEN_Pipe = 13, TOKEN_Underscore = 14, TOKEN_Comment = 15, 
                   TOKEN_Url = 16, TOKEN_Space = 17, TOKEN_Cdo = 18, TOKEN_Cdc = 19, 
                   TOKEN_Includes = 20, TOKEN_DashMatch = 21, TOKEN_Hash = 22, 
                   TOKEN_Import = 23, TOKEN_Page = 24, TOKEN_Media = 25, 
                   TOKEN_Namespace = 26, TOKEN_Charset = 27, TOKEN_Important = 28, 
                   TOKEN_Percentage = 29, TOKEN_Url_ = 30, TOKEN_UnicodeRange = 31, 
                   TOKEN_MediaOnly = 32, TOKEN_Not = 33, TOKEN_And = 34, 
                   TOKEN_Dimension = 35, TOKEN_UnknownDimension = 36, TOKEN_Plus = 37, 
                   TOKEN_Minus = 38, TOKEN_Greater = 39, TOKEN_Comma = 40, 
                   TOKEN_Tilde = 41, TOKEN_PseudoNot = 42, TOKEN_Number = 43, 
                   TOKEN_String_ = 44, TOKEN_PrefixMatch = 45, TOKEN_SuffixMatch = 46, 
                   TOKEN_SubstringMatch = 47, TOKEN_FontFace = 48, TOKEN_Supports = 49, 
                   TOKEN_Or = 50, TOKEN_Keyframes = 51, TOKEN_From = 52, 
                   TOKEN_To = 53, TOKEN_Calc = 54, TOKEN_Viewport = 55, 
                   TOKEN_CounterStyle = 56, TOKEN_FontFeatureValues = 57, 
                   TOKEN_DxImageTransform = 58, TOKEN_AtKeyword = 59, TOKEN_Variable = 60, 
                   TOKEN_Var = 61, TOKEN_Ident = 62, TOKEN_Function_ = 63, 
                   TOKEN_UnexpectedCharacter = 64;

  @override
  final List<String> ruleNames = [
    'stylesheet', 'charset', 'imports', 'namespace_', 'namespacePrefix', 
    'media', 'mediaQueryList', 'mediaQuery', 'mediaType', 'mediaExpression', 
    'mediaFeature', 'page', 'pseudoPage', 'selectorGroup', 'selector', 'combinator', 
    'simpleSelectorSequence', 'typeSelector', 'typeNamespacePrefix', 'elementName', 
    'universal', 'className', 'attrib', 'pseudo', 'functionalPseudo', 'expression', 
    'negation', 'negationArg', 'operator_', 'property_', 'ruleset', 'declarationList', 
    'declaration', 'prio', 'value', 'expr', 'term', 'function_', 'dxImageTransform', 
    'hexcolor', 'number', 'percentage', 'dimension', 'unknownDimension', 
    'any_', 'atRule', 'unused', 'block', 'nestedStatement', 'groupRuleBody', 
    'supportsRule', 'supportsCondition', 'supportsConditionInParens', 'supportsNegation', 
    'supportsConjunction', 'supportsDisjunction', 'supportsDeclarationCondition', 
    'generalEnclosed', 'url', 'var_', 'calc', 'calcSum', 'calcProduct', 
    'calcValue', 'fontFaceRule', 'fontFaceDeclaration', 'keyframesRule', 
    'keyframeBlock', 'keyframeSelector', 'viewport', 'counterStyle', 'fontFeatureValuesRule', 
    'fontFamilyNameList', 'fontFamilyName', 'featureValueBlock', 'featureType', 
    'featureValueDefinition', 'ident', 'ws'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "'='", "':'", 
      "'.'", "'*'", "'/'", "'|'", "'_'", null, null, null, "'<!--'", "'-->'", 
      "'~='", "'|='", null, null, null, null, null, "'@charset '", null, 
      null, "'url('", null, null, null, null, null, null, "'+'", "'-'", 
      "'>'", "','", "'~'", null, null, null, "'^='", "'\$='", "'*='", null, 
      null, null, null, null, null, "'calc('", null, null, null, null, null, 
      null, "'var('"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
      "CloseBrace", "SemiColon", "Equal", "Colon", "Dot", "Multiply", "Divide", 
      "Pipe", "Underscore", "Comment", "Url", "Space", "Cdo", "Cdc", "Includes", 
      "DashMatch", "Hash", "Import", "Page", "Media", "Namespace", "Charset", 
      "Important", "Percentage", "Url_", "UnicodeRange", "MediaOnly", "Not", 
      "And", "Dimension", "UnknownDimension", "Plus", "Minus", "Greater", 
      "Comma", "Tilde", "PseudoNot", "Number", "String_", "PrefixMatch", 
      "SuffixMatch", "SubstringMatch", "FontFace", "Supports", "Or", "Keyframes", 
      "From", "To", "Calc", "Viewport", "CounterStyle", "FontFeatureValues", 
      "DxImageTransform", "AtKeyword", "Variable", "Var", "Ident", "Function_", 
      "UnexpectedCharacter"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'CSSParser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  CSSParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  StylesheetContext stylesheet() {
    dynamic _localctx = StylesheetContext(context, state);
    enterRule(_localctx, 0, RULE_stylesheet);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 158;
      ws();
      state = 168;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_Charset) {
        state = 159;
        charset();
        state = 163;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0)) {
          state = 160;
          _la = tokenStream.LA(1)!;
          if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0))) {
          errorHandler.recoverInline(this);
          } else {
            if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 165;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 170;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 180;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_Import) {
        state = 171;
        imports();
        state = 175;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0)) {
          state = 172;
          _la = tokenStream.LA(1)!;
          if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0))) {
          errorHandler.recoverInline(this);
          } else {
            if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 177;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 182;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 192;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_Namespace) {
        state = 183;
        namespace_();
        state = 187;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0)) {
          state = 184;
          _la = tokenStream.LA(1)!;
          if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0))) {
          errorHandler.recoverInline(this);
          } else {
            if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 189;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 194;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 204;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & -3765259427856175574) != 0)) {
        state = 195;
        nestedStatement();
        state = 199;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0)) {
          state = 196;
          _la = tokenStream.LA(1)!;
          if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 950272) != 0))) {
          errorHandler.recoverInline(this);
          } else {
            if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 201;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 206;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 207;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CharsetContext charset() {
    dynamic _localctx = CharsetContext(context, state);
    enterRule(_localctx, 2, RULE_charset);
    try {
      state = 221;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 8, context)) {
      case 1:
        _localctx = GoodCharsetContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 209;
        match(TOKEN_Charset);
        state = 210;
        ws();
        state = 211;
        match(TOKEN_String_);
        state = 212;
        ws();
        state = 213;
        match(TOKEN_SemiColon);
        state = 214;
        ws();
        break;
      case 2:
        _localctx = BadCharsetContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 216;
        match(TOKEN_Charset);
        state = 217;
        ws();
        state = 218;
        match(TOKEN_String_);
        state = 219;
        ws();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportsContext imports() {
    dynamic _localctx = ImportsContext(context, state);
    enterRule(_localctx, 4, RULE_imports);
    try {
      state = 261;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 13, context)) {
      case 1:
        _localctx = GoodImportContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 223;
        match(TOKEN_Import);
        state = 224;
        ws();
        state = 227;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_String_:
          state = 225;
          match(TOKEN_String_);
          break;
        case TOKEN_Url:
        case TOKEN_Url_:
          state = 226;
          url();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 229;
        ws();
        state = 230;
        mediaQueryList();
        state = 231;
        match(TOKEN_SemiColon);
        state = 232;
        ws();
        break;
      case 2:
        _localctx = GoodImportContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 234;
        match(TOKEN_Import);
        state = 235;
        ws();
        state = 238;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_String_:
          state = 236;
          match(TOKEN_String_);
          break;
        case TOKEN_Url:
        case TOKEN_Url_:
          state = 237;
          url();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 240;
        ws();
        state = 241;
        match(TOKEN_SemiColon);
        state = 242;
        ws();
        break;
      case 3:
        _localctx = BadImportContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 244;
        match(TOKEN_Import);
        state = 245;
        ws();
        state = 248;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_String_:
          state = 246;
          match(TOKEN_String_);
          break;
        case TOKEN_Url:
        case TOKEN_Url_:
          state = 247;
          url();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 250;
        ws();
        state = 251;
        mediaQueryList();
        break;
      case 4:
        _localctx = BadImportContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 253;
        match(TOKEN_Import);
        state = 254;
        ws();
        state = 257;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_String_:
          state = 255;
          match(TOKEN_String_);
          break;
        case TOKEN_Url:
        case TOKEN_Url_:
          state = 256;
          url();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 259;
        ws();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Namespace_Context namespace_() {
    dynamic _localctx = Namespace_Context(context, state);
    enterRule(_localctx, 6, RULE_namespace_);
    int _la;
    try {
      state = 291;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 18, context)) {
      case 1:
        _localctx = GoodNamespaceContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 263;
        match(TOKEN_Namespace);
        state = 264;
        ws();
        state = 268;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 4626322747281113088) != 0)) {
          state = 265;
          namespacePrefix();
          state = 266;
          ws();
        }

        state = 272;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_String_:
          state = 270;
          match(TOKEN_String_);
          break;
        case TOKEN_Url:
        case TOKEN_Url_:
          state = 271;
          url();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 274;
        ws();
        state = 275;
        match(TOKEN_SemiColon);
        state = 276;
        ws();
        break;
      case 2:
        _localctx = BadNamespaceContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 278;
        match(TOKEN_Namespace);
        state = 279;
        ws();
        state = 283;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 4626322747281113088) != 0)) {
          state = 280;
          namespacePrefix();
          state = 281;
          ws();
        }

        state = 287;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_String_:
          state = 285;
          match(TOKEN_String_);
          break;
        case TOKEN_Url:
        case TOKEN_Url_:
          state = 286;
          url();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 289;
        ws();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NamespacePrefixContext namespacePrefix() {
    dynamic _localctx = NamespacePrefixContext(context, state);
    enterRule(_localctx, 8, RULE_namespacePrefix);
    try {
      enterOuterAlt(_localctx, 1);
      state = 293;
      ident();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MediaContext media() {
    dynamic _localctx = MediaContext(context, state);
    enterRule(_localctx, 10, RULE_media);
    try {
      enterOuterAlt(_localctx, 1);
      state = 295;
      match(TOKEN_Media);
      state = 296;
      ws();
      state = 297;
      mediaQueryList();
      state = 298;
      groupRuleBody();
      state = 299;
      ws();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MediaQueryListContext mediaQueryList() {
    dynamic _localctx = MediaQueryListContext(context, state);
    enterRule(_localctx, 12, RULE_mediaQueryList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 311;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 20, context)) {
      case 1:
        state = 301;
        mediaQuery();
        state = 308;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_Comma) {
          state = 302;
          match(TOKEN_Comma);
          state = 303;
          ws();
          state = 304;
          mediaQuery();
          state = 310;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        break;
      }
      state = 313;
      ws();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MediaQueryContext mediaQuery() {
    dynamic _localctx = MediaQueryContext(context, state);
    enterRule(_localctx, 14, RULE_mediaQuery);
    int _la;
    try {
      int _alt;
      state = 340;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_Comment:
      case TOKEN_Space:
      case TOKEN_MediaOnly:
      case TOKEN_Not:
      case TOKEN_And:
      case TOKEN_Or:
      case TOKEN_From:
      case TOKEN_To:
      case TOKEN_Ident:
        enterOuterAlt(_localctx, 1);
        state = 316;
        errorHandler.sync(this);
        switch (interpreter!.adaptivePredict(tokenStream, 21, context)) {
        case 1:
          state = 315;
          _la = tokenStream.LA(1)!;
          if (!(_la == TOKEN_MediaOnly || _la == TOKEN_Not)) {
          errorHandler.recoverInline(this);
          } else {
            if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          break;
        }
        state = 318;
        ws();
        state = 319;
        mediaType();
        state = 320;
        ws();
        state = 327;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 22, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 321;
            match(TOKEN_And);
            state = 322;
            ws();
            state = 323;
            mediaExpression(); 
          }
          state = 329;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 22, context);
        }
        break;
      case TOKEN_OpenParen:
        enterOuterAlt(_localctx, 2);
        state = 330;
        mediaExpression();
        state = 337;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 23, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 331;
            match(TOKEN_And);
            state = 332;
            ws();
            state = 333;
            mediaExpression(); 
          }
          state = 339;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 23, context);
        }
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MediaTypeContext mediaType() {
    dynamic _localctx = MediaTypeContext(context, state);
    enterRule(_localctx, 16, RULE_mediaType);
    try {
      enterOuterAlt(_localctx, 1);
      state = 342;
      ident();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
